language/move-lang/tests/move_check/parser/friend_decl_qualified_function.exp
error: 

   ┌── tests/move_check/parser/friend_decl_qualified_function.move:7:19 ───
   │
 7 │     friend 0x42::A::a;
   │                   ^^ Unexpected '::'
   ·
 7 │     friend 0x42::A::a;
   │                   -- Expected ';'
   │

