language/move-lang/tests/move_check/parser/friend_decl_qualified_function.move
address 0x42 {
module A {
    fun a() {}
}

module M {
    friend 0x42::A::a;
}
}
